# wutag

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  TODO.md  appbackup.rs  cliff.toml  justfile  my.db  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
completions/: _wutag  _wutag.ps1  wutag.bash  wutag.elvish  wutag.fish  wutag.ps1
example/: wutag.yml
example_files/tests/: sample.reg
man/: wutag.1
src/: app.rs  comp_helper.rs  config.rs  consts.rs  directories.rs  filesystem.rs  macros.rs  main.rs  opt.rs  oregistry.rs  registry.rs  util.rs
src/encryption/: mod.rs  recipients.rs  types.rs  util.rs
src/encryption/backend/: mod.rs
src/encryption/backend/gpgme/: context.rs  mod.rs  raw.rs
src/encryption/protocol/: gpg.rs  mod.rs
src/exe/: command.rs  exits.rs  input.rs  job.rs  mod.rs  token.rs
src/registry/: db_tests.rs  file.rs  filetag.rs  implication.rs  mod.rs  query.rs  schema.rs  sqlbuilder.rs  tag.rs  tests.rs  transaction.rs  upgrade.rs  value.rs  version.rs
src/registry/api/: file.rs  filetag.rs  implication.rs  mod.rs  query.rs  tag.rs  tests.rs  value.rs
src/registry/common/: hash.rs  mod.rs  path.rs  utils.rs  version.rs
src/registry/querier/: combinator.rs  mod.rs  parser.rs  parser_tests.rs  tracker.rs
src/registry/querier/ast/: error.rs  mod.rs  query.rs  search.rs  time.rs
src/registry/types/: file.rs  filetag.rs  implication.rs  mod.rs  query.rs  tag.rs  tag_color.rs  value.rs  wuid.rs
src/subcommand/: clean_cache.rs  clear.rs  cp.rs  edit.rs  info.rs  init.rs  list.rs  list2.rs  merge.rs  mod.rs  print_completions.rs  repair.rs  rm.rs  search.rs  set.rs  set2.rs  testing.rs  uses.rs  view.rs  xattr.rs
src/subcommand/backup/: list-bkp.rs
src/ui/: banner.rs  command.rs  completion.rs  context.rs  event.rs  history.rs  keybindings.rs  list.rs  mod.rs  mtui.rs  prompt.rs  style.rs  table.rs  ui_app.rs
src/utils/: color.rs  comp_helper.rs  fmt.rs  mod.rs
src/xattr/: mod.rs  tag.rs  tag_old.rs  value.rs
src/xattr/core/: mod.rs  unix.rs  windows.rs
tests/: test.rs  tests.rs
tests/cli/: color.rs  list.rs  mod.rs  rm.rs  set.rs  view.rs
tests/example_files/tests/: sample.reg
wutag_core/: color.rs  lib.rs  tag.rs
wutag_core/xattr/: mod.rs  unix.rs  windows.rs
